적금상품 수집 및 조회 기능 개발 (#97)
* [Docs] DTO 폴더구조 삭제 및 수정

* [Docs] 금융회사,예/적금,개인대출 DTO파일 수정

* [Style] 예/적금,금융회사  service단 메서드 수정 및 외부api(호출 + 저장)메서드 생성

* [Refactor] mapper.xml 수정 및 기능 추가

 Conflicts:
	src/main/resources/org/scoula/domain/financialproduct/personalcreditLoan/mapper/PersonalCreditLoanMapper.xml

* [Refactor] rootconfig, ServletConfig 매퍼스캔,컴포넌트스캔,컨트롤러에다가 금융회사 관련 스캔 추가

# Conflicts:
#	src/main/java/org/scoula/global/common/config/RootConfig.java

* [refactor]기본 crud 구성 변경 및 조회 기능 추가

* [feat] 금융회사,예/적금, 개인대출, 전세대출 상품 등록 api 추가

* [Chore] 주석삭제 및 오타 수정

* [Feat] 금융회사 전화번호,주소 컬럼 추가 및 DB저장 기능 추가

* [Fix] RemittanceGroup.java 충돌해결

* [Feat]: join member (#40)

* Feat: 회원가입 관련 API
- 회원가입 기능
- 아이디 중복 체크

Related to: #23

* Feat: 잔여 체류 기간 조회 기능 추가

- Codef Token 레디스 저장
- Codef 잔여 체류 기간 API 연동
- 회원가입 로직 중 체류기간 호출

Related to: #23

* Doc: 스웨거 명세서 코드 추가

Related to: #23

* Refactor: 겹치는 코드 수정

Related to: #23

* Feat: member 엔티티 수정된 부분 업데이트

Related to: #23

* Refactor: flyway sql문 추가

Related to: #23

* Fix: 이름 수정

Related to: #23

* Feat: 문자 인증 API 추가

Related to: #23

* Refactor: 분단위로 변경

Related to: #23

* Refactor: 리뷰 반영

Related to: #23

* Feat: SMS 인증 관련 시크릿값 추가

Related to: #23

* Refactor: 리베이스 충돌 해결

Related to: #23

* Refactor: 회원가입시 DTO 변경

- 응답 추가
- enum값 스웨거 명시

Related to: #23

* Refactor: 반환값 추가

- 이름 추가

Related to: #23

* Refactor: 날짜 형식 변경

Related to: #23

* Refactor: Codef 토큰 없을때 자동으로 재발급

Related to: #23

* hotfix: flyway 스키마 원복

* [Feat]: 송금 API (#54)

* Feature: 송금 API

- 전화번호 송금
- 계좌번호 송금
- 전화번호 및 계좌로 예금주명 조회
- 회계 처리 추가
- 거래 내역 추가

Related to: #45

* Refactor: 데이터 포맷 변경

Related to: #45

* Fix: 오류나는 부분 수정

Related to: #45

* Feat: 예외 처리 추가

Related to: #45

* [Feat]: 전자지갑 포인트 충전 (#56)

* feat: 계좌 조회 기능 추가

* feat: 지갑 충전 회계 장부 작성 기능 추가

* feat: 지갑 충전 거래내역 기록 기능 추가

* feat: 지갑 포인트 충전 로직 작성

* feat: 지갑 포인트 충전 로직 컨트롤러 코드 작성

* [Docs] 문서 삭제

* [Docs]  예금,적금 레코드 문서 추가

* [ Docs] 예/적금 공통 문서 추가

* [feat] 예금 필터링 및 조회 기능 개발

* [docs] 적금 파일 구조 분리

* [Ref